--- a/hello-atom-shell/index.html
+++ b/hello-atom-shell/index.html
@@ -2,8 +2,20 @@
 <html>
 <head>
   <title>Hello World</title>
+  <script>
+    window.onload = function() {
+      var remote = require('remote');
+      document.getElementById('version').innerHTML = remote.require('app').getVersion();
+      var fs = require("fs");
+      var data = fs.readFileSync('hello-atom-shell/memo.txt');
+      document.getElementById("data").innerHTML = data;
+    }
+  </script>
 </head>
 <body>
   <h1>Hello World!</h1>
+  <div id="version"></div>
+  <div id="data"></div>
+  <webview id="webview" src="https://www.github.com" style="width: 800px; height:200px"></webview>
 </body>
 </html>
